--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "@getbrevo/brevo": "^4.0.1",
+    "@sendgrid/mail": "^8.1.6",
     "axios": "^1.13.5",
     "cors": "^2.8.6",
     "dotenv": "^17.3.1",
